fixed footer on mobile, fixed outfit name not wrapping on item cards

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -136,6 +136,7 @@ input[type=text] {
 .resonance {
 	width: 900px;
 	margin: 10px auto;
+	max-width: 95%;
 }
 
 .resonance-header {
